# fiber-inspector

./: .gitignore  CMakeLists.txt  DEVGUIDE.md  Dockerfile  Dockerfile.debug  Dockerfile.prod  GETTING-STARTED.md  README-DOCKER.md  README.md  check_files.sh  check_opengl.sh  check_paths.sh  check_qt.sh  cleanup_docker.sh  create_minimal_pngs.sh  debug_app.sh  debug_test.sh  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  rebuild.sh  run_test.sh  setup.sh  test_core_functionality.cpp  use_debug_env.sh  use_prod_env.sh
cmake/: DebugOptions.cmake
include/: fiberanalyzer.h  imageprocessor.h  mainwindow.h  resultsmanager.h
resources/: resources.qrc
src/: fiberanalyzer.cpp  imageprocessor.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  resultsmanager.cpp
